# don_theory

./: CLAUDE.md  README.md  master_schedule.md
.claude/: settings.local.json
experience/: common.py  config.yaml  exp01.md  exp01.py  exp01_modify.py  exp02.md  exp02.py  exp03.py  exp04.py  exp05.py  exp_extra_01.py  pyproject.toml  tasks.md
experience/discussion/exp01/: notes.md
experience/discussion/exp01_modify/: notes.md
experience/discussion/exp02/: notes.md
experience/discussion/exp04/: notes.md
experience/discussion/exp05/: notes.md
experience/discussion/exp_extra_01/: notes.md
experience/models/: dynamics_seed0.pt  observer_seed0.pt
experience/results/exp01/: exp1_steps.csv  exp1_summary.csv
experience/results/exp01_modify/: exp1m_steps.csv  exp1m_summary.csv
experience/results/exp02/: exp2_dynamics.csv  exp2_runs.csv
experience/results/exp03/: exp3_dims.csv  exp3_runs.csv
experience/results/exp04/: exp4_grid.csv
experience/results/exp05/: exp5_corollary2.csv  exp5_runs.csv  exp5_theorem1.csv
experience/results/exp_extra_01/: extra1_steps.csv  extra1_summary.csv
lab/applied/: idea.md
lab/basic/: idea.md
lab/foundations/: idea.md
lab/optim/: idea.md
lab/wild/: idea.md
lab/wild/W07/: future.md
report/: SUBMISSION_CANDIDATE_report_v3_math.md  appendix_a.md  build_pdf.py  conclusion.md  discussion.md  figures.md  futere_work.md  manuscript_v_20260313.md  manuscript_v_20260314.md  result.md  seq01.md  seq02.md  seq03.md  seq04.md
verify/: tasks.md
verify/lean4/: MedicusVerify.lean
visualization/: README.md  run_all.py
(+38 files in other folders)
